
* GITHUB#15585: Added shared prefetch counter to maintain count across clones and slices of MemorySegmentIndexInput. (Shubham Sharma)

* GITHUB#15632: Use a coarser-grained competitive iterator with lower construction costs for
  numeric sorts against fields with DocValuesSkippers. (Alan Woodward)

Bug Fixes
---------------------
* GITHUB#14161: PointInSetQuery's constructor now throws IllegalArgumentException
  instead of UnsupportedOperationException when values are out of order. (Shubham Sharma)

* GITHUB#15205: Fixes regression introduced in GITHUB#13980 where polygons might fail to tessellate
  because the hole bridge is coplanar with the polygon vertex. The fix changes the strategy for
  removing co-planar points to do it once after all holes are removed instead of doing it for each
  removed hole.

* GITHUB#15213: Don't normalize centroids with zero samples, which caused divide-by-zero. (Mike Sokolov)

* GITHUB#15319: Fix potential hang in initialisation of TermsEnum and BaseTermsEnum (Chris Hegarty)

* GITHUB#15334: Fix NPE for MemoryIndex when using nearest neighbor search. MemoryIndex does not support
  nearest neighbor search, but it should not throw an NPE (Ben Trent)

* GITHUB#15380: Fix potential EOF introduced by optimized filter iterations in MaxScoreBulkScorer. The
  approximation and the match verification could get out of sync, resulting in an EOFException. (Ben Trent)

* GITHUB#15478: Fix duplicate neighbor issue by checking node existence before making reverse link. (Pulkit Gupta)

* GITHUB#15523: Updating createMultiSegmentIndex to utilize an explicit NoMergePolicy (Bryce Kane)

* GITHUB#14616 : Fix mis-interpretation of `maxNumBytes` in FuzzySet#createSetBasedOnMaxMemory (Greg Miller)

Other
---------------------
* GITHUB#15237: Fix SmartChinese to only deserialize dictionary data from classpath with a native array
  filter applied and never cache dictionaries from custom locations. Also install a global deserialization